--- a/app/package.json
+++ b/app/package.json
@@ -24,8 +24,9 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "angularfire2": "^5.0.0-rc.2",
+    "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.5.0",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
@@ -37,5 +38,10 @@
     "@ionic/app-scripts": "3.0.0",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
